got toggle working

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div class="listsContainer">
             <article class="criminalsContainer"></article>
             <article class="notesContainer"></article>
+            <article class="knownAssociatesContainer"></article>
+            <article class="notes__button"></article>
         </div>
     </main>
 
