got witness button working

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <div class="filter filters__officer"></div>
                 <div class="notes__button"></div>
                 <div class="noteForm__button"></div>
+                <div class="notes__button"></div>
+                <div class="witness__button"></div>
             </div>
         </header>
         <article class="noteFormContainer"></article>
@@ -24,7 +26,9 @@
             <article class="criminalsContainer"></article>
             <article class="notesContainer"></article>
             <article class="knownAssociatesContainer"></article>
-            <article class="notes__button"></article>
+            <article class="statementContainer"></article>
+            
+            
         </div>
     </main>
 
